<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">


    <RelativeLayout
        android:id="@+id/widget_rela"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="#99ffffff"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/widget_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/widget_time"
                    android:textSize="28sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp">

                <TextView
                    android:text="@string/widget_temp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/widget_temp"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                     />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/widget_cond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_cond"
                        android:textColor="@color/black"
                        android:layout_gravity="start"/>
                    <TextView
                        android:id="@+id/widget_aqi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_aqi"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:contentDescription="@string/image_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="45dp"
            android:id="@+id/widget_img"
            android:src="@drawable/widget_sunny"/>

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:text="@string/widget_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_wind"
                android:textColor="@color/black"
                />

            <TextView
                android:text="@string/widget_city"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_city"
                android:layout_below="@+id/widget_wind"
                android:textColor="@color/black"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

    </RelativeLayout>
    <TextView
        android:text="@string/widget_suggest"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/widget_suggestion"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="#ccafeeee"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:duplicateParentState="false"
        android:focusableInTouchMode="true">
        <requestFocus
            android:focusable="true"
            android:duplicateParentState="false"
            android:focusableInTouchMode="true"/>
    </TextView>





</LinearLayout>